--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,7 @@ spring:
           auth: true
           starttls.enable: true
           starttls.required: true
+
+metrics:
+  influxdb.active: false
+  console: false
