--- a/src/main/resources/application-local_postgres.yml
+++ b/src/main/resources/application-local_postgres.yml
@@ -16,7 +16,7 @@ spring:
 
 metrics:
   influxdb:
-    active: true
+    active: false
     host: 127.0.0.1
     port: 8086
     database: tonkoslovie
