--- a/src/main/resources/application-local_postgres.yml
+++ b/src/main/resources/application-local_postgres.yml
@@ -13,6 +13,9 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: ru.romanov.tonkoslovie.utils.JsonPostgresDialect
 
 metrics:
   influxdb:
