--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: create
+      use-new-id-generator-mappings: true
   mail:
     host: smtp.gmail.com
     port: 587
