--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,14 @@ spring:
       max-file-size: 128MB
       max-request-size: 128MB
 
+app:
+  redis:
+    host: localhost
+    port: 6379
+  security:
+    redis-prefix: "auth:user:"
+
+
 metrics:
   influxdb.active: false
   console: false
@@ -39,7 +47,3 @@ mail:
 media:
   imageDirectory: /app/tonkoslovie/images
   soundDirectory: /app/tonkoslovie/sounds
-
-redis:
-  host: localhost
-  port: 6379
