Add redis password

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,7 @@ app:
   redis:
     host: localhost
     port: 6379
+    password: ${redis.password}
   security:
     redis-prefix: "auth:user:"
 
