--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:h2:mem:test;MODE=PostgreSQL
     driver-class-name: org.h2.Driver
+    username: ${database.username}
+    password: ${database.password}
   jpa:
     show-sql: false
     hibernate:
