--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -73,8 +73,5 @@ facebook:
     tokenName: oauth_token
     authenticationScheme: query
     clientAuthenticationScheme: form
-    scope:
-      - email
-      - user_about_me
   resource:
-    userInfoUri: https://graph.facebook.com/me
+    userInfoUri: https://graph.facebook.com/me?fields=first_name,last_name,email
