--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
     hibernate:
       ddl-auto: create
       use-new-id-generator-mappings: true
+    properties:
+      hibernate:
+        dialect: ru.romanov.tonkoslovie.utils.JsonPostgresDialect
   mail:
     host: smtp.gmail.com
     port: 587
