--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,7 +39,12 @@ redis:
   port: 6379
 
 metrics:
-  influxdb.active: false
+  influxdb:
+    active: false
+    host: 127.0.0.1
+    port: 8086
+    database: tonkoslovie
+    auth: ${influx.auth}
   console: false
 
 mail:
