--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,4 +9,15 @@ http {
       expires 30d;
     }
   }
+
+  server {
+    listen 0.0.0.0:80;
+
+    location / {
+        proxy_pass http://127.0.0.1:3000;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+  }
 }
