--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,9 +3,9 @@ events {}
 http {
   server {
     listen 0.0.0.0:8081;
-    root /usr/share/nginx/html/;
+    root /app/tonkoslovie/;
 
-    location / {
+    location /tonkoslovie {
       expires 30d;
     }
   }
