--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ events {}
 http {
   server {
     listen 0.0.0.0:8081;
-    root /app/tonkoslovie/;
+    root /app/;
 
     location /tonkoslovie {
       expires 30d;
