--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,23 @@ http {
   }
 
   server {
+    listen 0.0.0.0:443;
+    root /app/;
+
+    ssl    on;
+    ssl_certificate    /etc/letsencrypt/live/tonkoslovie.ru/fullchain.pem; (or bundle.crt)
+    ssl_certificate_key       /etc/letsencrypt/live/tonkoslovie.ru/privkey.pem;
+    server_name tonkoslovie.ru;
+
+    location / {
+        proxy_pass http://127.0.0.1:3000;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+  }
+
+  server {
     listen 0.0.0.0:80;
 
     location / {
