--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,10 +12,9 @@ http {
 
   server {
     listen 0.0.0.0:443;
-    root /app/;
 
     ssl    on;
-    ssl_certificate    /etc/letsencrypt/live/tonkoslovie.ru/fullchain.pem; (or bundle.crt)
+    ssl_certificate    /etc/letsencrypt/live/tonkoslovie.ru/fullchain.pem;
     ssl_certificate_key       /etc/letsencrypt/live/tonkoslovie.ru/privkey.pem;
     server_name tonkoslovie.ru;
 
