--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,6 +18,13 @@ http {
     ssl_certificate_key       /etc/letsencrypt/live/tonkoslovie.ru/privkey.pem;
     server_name tonkoslovie.ru;
 
+    location /api {
+        proxy_pass http://127.0.0.1:8080;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+    
     location / {
         proxy_pass http://127.0.0.1:3000;
         proxy_set_header Host $http_host;
@@ -28,6 +35,13 @@ http {
 
   server {
     listen 0.0.0.0:80;
+
+    location /api {
+        proxy_pass http://127.0.0.1:8080;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
     location / {
         proxy_pass http://127.0.0.1:3000;
