--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,7 @@ events {}
 http {
   server {
     listen 0.0.0.0:443;
+    root /app/;
 
     ssl    on;
     ssl_certificate    /etc/letsencrypt/live/tonkoslovie.ru/fullchain.pem;
