--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,5 +1,6 @@
 app:
-  host: http://88.198.165.206:3000
+  host: http://88.198.165.206:8080
+  siteHost: http://88.198.165.206:3000
 
 spring:
   datasource:
