Add nginx redirect from http to https

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,6 +34,8 @@ http {
   server {
     listen 0.0.0.0:80;
     root /app/;
+    server_name tonkoslovie.ru;
+    return 301 https://$server_name$request_uri;  # enforce https
 
     location /api {
         proxy_pass http://127.0.0.1:8080;
