Migrate to Spring Boot 2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,8 @@ spring:
     properties:
       hibernate:
         dialect: ru.romanov.tonkoslovie.utils.JsonPostgresDialect
+        temp:
+          use_jdbc_metadata_defaults: false
   mail:
     host: smtp.gmail.com
     port: 587
