--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     username: ${database.username}
     password: ${database.password}
   jpa:
-    open-in-view: false
+    open-in-view: true
     show-sql: false
     hibernate:
       ddl-auto: create
