--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,14 +3,6 @@ app:
   siteHost: http://88.198.165.206:3000
 
 spring:
-  datasource:
-    hikari:
-      minimum-idle: 1
-      maximum-pool-size: 25
-      idle-timeout: 10000
-    type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost/tonkoslovie
-    driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: false
     hibernate:
@@ -18,6 +10,11 @@ spring:
     properties:
       hibernate:
         dialect: ru.romanov.tonkoslovie.utils.JsonPostgresDialect
+
+hikari:
+  datasource:
+    driverClassName: org.postgresql.Driver
+    jdbcUrl: jdbc:postgresql://localhost/tonkoslovie
 
 redis:
   port: 6378
