--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,7 @@ http {
   server {
     listen 0.0.0.0:443;
     root /app/;
+    server_tokens off;
 
     ssl    on;
     ssl_certificate    /etc/letsencrypt/live/tonkoslovie.ru/fullchain.pem;
@@ -28,6 +29,7 @@ http {
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        expires max;
     }
   }
 
