--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,15 @@ services:
         interval: 10s
         timeout: 3s
         retries: 5
+
+  redis:
+    image: redis:5-alpine
+    container_name: tonkoslovie_redis
+    ports:
+      - 6379:6379
+    command: redis-server --requirepass 1234
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli","ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
