--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,22 @@ services:
       interval: 10s
       timeout: 3s
       retries: 5
+
+  influxdb:
+    image: influxdb:1.7-alpine
+    container_name: tonkoslovie_influx
+    ports:
+      - 8086:8086
+    environment:
+      - INFLUXDB_DB=tonkoslovie
+      - INFLUXDB_HTTP_AUTH_ENABLED=true
+      - INFLUXDB_ADMIN_USER=${INFLUXDB_ADMIN_USER:-admin}
+      - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_ADMIN_PASSWORD:-1234}
+      - INFLUXDB_USER=${INFLUXDB_USER:-user}
+      - INFLUXDB_USER_PASSWORD=${INFLUXDB_USER_PASSWORD:-1234}
+      - INFLUXDB_HTTP_LOG_ENABLED=false
+    healthcheck:
+      test: ["CMD-SHELL", "ln -sf /bin/busybox /bin/wget && /bin/wget -q -Y off http://localhost:8086/metrics -O /dev/null > /dev/null 2>&1"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
