Change email library

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,9 @@ services:
       - OAUTH_FB_SECRET=${OAUTH_FB_SECRET}
       - OAUTH_VK_CLIENT_ID=${OAUTH_VK_CLIENT_ID}
       - OAUTH_VK_SECRET=${OAUTH_VK_SECRET}
-      - JWT_SECRET=${JWT_SECRET:1234}
+      - MAIL_USERNAME=${MAIL_USERNAME}
+      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      - JWT_SECRET=${JWT_SECRET:-1234}
     ports:
       - 8081:8080
     healthcheck:
