--- a/pom.xml
+++ b/pom.xml
@@ -89,9 +89,9 @@
 
         <!-- Mail -->
         <dependency>
-            <groupId>it.ozimov</groupId>
-            <artifactId>spring-boot-thymeleaf-email</artifactId>
-            <version>0.6.3</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.2.5.RELEASE</version>
         </dependency>
 
         <!-- Database -->
@@ -139,6 +139,11 @@
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
             <version>0.4.11</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>29.0-jre</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
