--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -101,7 +101,7 @@ spring:
             userNameAttribute: user_id
             tokenUri: https://oauth.vk.com/access_token
             authorizationUri: https://oauth.vk.com/authorize
-            userInfoUri: https://api.vk.com/method/users.get?fields=bdate,sex,photo_max_orig,friend_status,relation,relation_partner&v=5.92
+            userInfoUri: https://api.vk.com/method/users.get?fields=photo_max_orig&v=5.92
 
 media:
   imageDirectory: /app/tonkoslovie/images
