Fix environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,16 +17,16 @@ services:
       - INFLUXDB_ENABLED=true
       - INFLUXDB_URI=http://influxdb:8086
       - INFLUXDB_USER=${INFLUXDB_USER:-admin}
-      - INFLUXDB_USER_PASSWORD=${INFLUXDB_PASSWORD:-1234}
-      - OAUTH_GOOGLE_CLIENT_ID=${OAUTH_GOOGLE_CLIENT_ID}
-      - OAUTH_GOOGLE_SECRET=${OAUTH_GOOGLE_SECRET}
-      - OAUTH_FB_CLIENT_ID=${OAUTH_FB_CLIENT_ID}
-      - OAUTH_FB_SECRET=${OAUTH_FB_SECRET}
-      - OAUTH_VK_CLIENT_ID=${OAUTH_VK_CLIENT_ID}
-      - OAUTH_VK_SECRET=${OAUTH_VK_SECRET}
+      - INFLUXDB_PASSWORD=${INFLUXDB_PASSWORD:-1234}
+      - OAUTH_GOOGLE_CLIENT_ID=${OAUTH_GOOGLE_CLIENT_ID:-test}
+      - OAUTH_GOOGLE_SECRET=${OAUTH_GOOGLE_SECRET:-test}
+      - OAUTH_FB_CLIENT_ID=${OAUTH_FB_CLIENT_ID:-test}
+      - OAUTH_FB_SECRET=${OAUTH_FB_SECRET:-test}
+      - OAUTH_VK_CLIENT_ID=${OAUTH_VK_CLIENT_ID:-test}
+      - OAUTH_VK_SECRET=${OAUTH_VK_SECRET:-test}
       - MAIL_USERNAME=${MAIL_USERNAME}
       - MAIL_PASSWORD=${MAIL_PASSWORD}
-      - JWT_SECRET=${JWT_SECRET:-1234}
+      - JWT_SECRET=${JWT_SECRET:-nUmHdv1cSMjl4v1D8yD6VLIjdm4S5Q4O}
     ports:
       - 8081:8080
     healthcheck:
