--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <imageName>tonkoslovie_application:${project.version}</imageName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
