--- a/src/main/resources/db/changelog-1.0-user.yaml
+++ b/src/main/resources/db/changelog-1.0-user.yaml
@@ -41,7 +41,7 @@ databaseChangeLog:
               comment: Create email verification table char(36)
               sql: CREATE TABLE "public"."email_verification" (
                    "id" int8 NOT NULL PRIMARY KEY,
-                   "expiry_date" timestamp(6),
+                   "expiration_date" timestamp(6),
                    "token" uuid,
                    "user_id" int8
                    ) WITH (OIDS=FALSE);
