Add nginx to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,9 @@ services:
       - JWT_SECRET=${JWT_SECRET:-nUmHdv1cSMjl4v1D8yD6VLIjdm4S5Q4O}
     ports:
       - 8081:8080
-    healthcheck:
-        test: ["CMD-SHELL", "curl -f localhost:8085/actuator/health || false"]
-        interval: 10s
-        timeout: 3s
-        retries: 5
+    volumes:
+      - ./nginx/nginx_local.conf:/etc/nginx/nginx.conf
+      - ./data:/workspace/data
 
   postgres:
     image: postgres:11-alpine
@@ -54,6 +52,20 @@ services:
     container_name: tonkoslovie_redis
     healthcheck:
       test: ["CMD-SHELL", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+
+  nginx:
+    image: nginx
+    container_name: tonkoslovie_nginx
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx/nginx_local.conf:/etc/nginx/nginx.conf
+      - ./data:/usr/share/nginx/html/tonkoslovie
+    healthcheck:
+      test: ["CMD", "service", "nginx", "status"]
       interval: 10s
       timeout: 3s
       retries: 5
