--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - OAUTH_FB_SECRET=${OAUTH_FB_SECRET:-test}
       - OAUTH_VK_CLIENT_ID=${OAUTH_VK_CLIENT_ID:-test}
       - OAUTH_VK_SECRET=${OAUTH_VK_SECRET:-test}
-      - MAIL_USERNAME=${MAIL_USERNAME}
-      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_USERNAME=${MAIL_USERNAME:-test}
+      - MAIL_PASSWORD=${MAIL_PASSWORD:-test}
       - JWT_SECRET=${JWT_SECRET:-nUmHdv1cSMjl4v1D8yD6VLIjdm4S5Q4O}
     ports:
       - 8081:8080
