Extract hibernate classes to separate package

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
       ddl-auto: validate
     properties:
       hibernate:
-        dialect: ru.romanov.tonkoslovie.utils.JsonPostgresDialect
+        dialect: ru.romanov.tonkoslovie.hibernate.JsonPostgresDialect
         temp:
           use_jdbc_metadata_defaults: false
 
