--- a/tonkoslovie-mail/pom.xml
+++ b/tonkoslovie-mail/pom.xml
@@ -37,6 +37,16 @@
             <artifactId>tonkoslovie-model</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- Other -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
