--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.3'
+version: '3.8'
 
 services:
   application:
@@ -80,46 +80,70 @@ services:
       ZOOKEEPER_SERVERS: zookeeper:22888:23888
     ports:
       - 2181:2181
+    volumes:
+      - ./docker_volumes/zookeeper/data:/var/lib/zookeeper/data
+      - ./docker_volumes/zookeeper/log:/var/lib/zookeeper/log
+      - ./docker_volumes/zookeeper/secrets:/etc/zookeeper/secrets
+    healthcheck:
+      test: [ "CMD-SHELL", "echo stat | nc localhost $$ZOOKEEPER_CLIENT_PORT" ]
+      start_period: 1m
+      interval: 10s
+      timeout: 3s
+      retries: 5
 
   kafka:
     image: confluentinc/cp-kafka
     container_name: tonkoslovie_kafka
     depends_on:
       - zookeeper
-    ports:
-      - 9092:9092
-    restart: on-failure
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: INSIDE://kafka:29092,OUTSIDE://kafka:9092
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:29092,OUTSIDE://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
       KAFKA_BROKER_ID: 1
       KAFKA_DELETE_TOPIC_ENABLE: 'true'
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    ports:
+      - 9092:9092
+      - 29092:29092
+    restart: on-failure
+    volumes:
+      - ./docker_volumes/kafka/data:/var/lib/kafka/data
+      - ./docker_volumes/kafka/secrets:/etc/kafka/secrets
+    healthcheck:
+      test: [ "CMD", "nc", "-z", "localhost", "9092" ]
+      start_period: 1m
+      interval: 10s
+      timeout: 3s
+      retries: 5
 
   kafka-ui:
     image: obsidiandynamics/kafdrop
     container_name: tonkoslovie_kafka-ui
     depends_on:
       - kafka
+    environment:
+      KAFKA_BROKERCONNECT: kafka:9092
     ports:
       - 9002:9000
-    environment:
-      KAFKA_BROKERCONNECT: kafka:29092
+    healthcheck:
+      test: "curl -f localhost:9000/actuator/health || exit 1"
+      start_period: 1m
+      interval: 10s
+      timeout: 3s
+      retries: 5
 
   influxdb:
     image: influxdb:1.7-alpine
     container_name: tonkoslovie_influxdb
-    ports:
-      - 8086:8086
     environment:
       INFLUXDB_ADMIN_USER: ${INFLUXDB_USER:-admin}
       INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_PASSWORD:-1234}
       INFLUXDB_HTTP_AUTH_ENABLED: 'true'
       INFLUXDB_HTTP_LOG_ENABLED: 'false'
+    ports:
+      - 8086:8086
     healthcheck:
       test: [ "CMD-SHELL", "ln -sf /bin/busybox /bin/wget && /bin/wget -q -Y off http://localhost:8086/metrics -O /dev/null > /dev/null 2>&1" ]
       interval: 10s
