--- a/tonkoslovie-mail/src/main/resources/application.yml
+++ b/tonkoslovie-mail/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   kafka:
     consumer:
+      bootstrap-servers: ${KAFKA_HOST:localhost}:${KAFKA_PORT:29092}
       group-id: "mail-group"
       auto-offset-reset: earliest
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
