--- a/tonkoslovie-mail/pom.xml
+++ b/tonkoslovie-mail/pom.xml
@@ -10,6 +10,23 @@
         <version>0.2</version>
     </parent>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <imageName>tonkoslovie_mail</imageName>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.0.2155</version>
+            </plugin>
+        </plugins>
+    </build>
+
     <artifactId>tonkoslovie-mail</artifactId>
 
     <dependencies>
